--- a/.env.example
+++ b/.env.example
@@ -39,9 +39,12 @@ MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 
+SMS_API_KEY=
+SMS_SEND_URL=
+SMS_RATE_LIMIT=
+
 L5_SWAGGER_GENERATE_ALWAYS=true
 
 API_VERSION=v1
-
 
 JWT_SECRET=
